theme/static/css/hydroshare_core.css
/* ... */
.conversation-description {
    border-left: 0;
}

.table-members-list .profile-pic-thumbnail{
    margin-top: 10px;
}

.table-members-list {
    width: 100%;
}

.table-members-list button.dropdown-toggle {
	width: 110px;
}

.table-members-list tr > td:first-child {
    width: 40px;
}

.table-members-list tr > td {
    padding-bottom: 20px;
}

.btn-list-more {
    cursor: pointer;
}

.group-thumbnail-footer {
	padding-top: 10px;
	position: absolute;
	bottom: 14px;
}

.group-thumbnail-footer .btn-ask-to-join {
    margin-top: 10px;
}

hr.solid {
    border: none;
    border-top: 1px solid #DDD;
    height: 1px;
    width: 100%;
}

div.group-add-photo {
    border: 1px solid #DDD;
}

.btn-ask-to-join {
	width: 100%;
}

.request-details {
	margin-left: 10px;
}

#btn-add-funding-agency {
    margin-bottom: 20px;
}

#collection-table_wrapper {
    margin-bottom: 20px;
}

.link-members {
	margin-bottom: 10px;
}

.flag-joined {
	color: #4BB5C1;
}

.flag-declined {
	color:#d9534f;
}

.flag-joined .glyphicon {
	border: 1px solid #4BB5C1;
	border-radius: 50%;
	height: 30px;
	width: 30px;
	padding-top: 5px;
	padding-right: 2px;
}

.flag-declined .glyphicon {
	border: 1px solid #d9534f;
	border-radius: 50%;
	height: 30px;
	width: 30px;
	padding-top: 5px;
}

.request-block {
    margin-top: 20px;
    border: 1px solid #DDD;
    padding: 10px;
    border-radius: 4px;
}

.request-block .activity-block {
	padding: 2px;
}

.access-icon-wrapper {
	display: inline-block;
}

#coverages-master-list {
	display:inline-block;
	max-height:190px;
	overflow-y: auto;
	border: 1px solid #DDD;
}

.resource-popover-option {
	display: inline-block;
	margin: 5px;
}

#discover-filter-buttons {
	margin-bottom: 10px;
}

#list-data-options {
	float: right;
	margin-bottom: 10px;
}

#discover-map {
	height:650px;
	border: 1px solid #DDD;
}

#discover-map-legend {
	background: rgba(255, 255, 255, 0.75);
	padding: 10px;
	margin: 5px;
	border-radius: 4px;
	border: 1px solid #DDD;
}

#geocoder-panel {
	z-index: 5;
	padding: 5px;
	text-align: center;
	font-family: 'Roboto','sans-serif';
	padding-left: 10px;
	background-color: rgba(255,255,255,0.75);
	border: 1px solid #DDD;
	border-radius: 4px;
	width: 300px;
    margin-left: 10px;
    line-height: 30px;
    font-size: 16px;
}

#geocoder-address {
    width: 210px;
}

#manual-zoom-btn {
	margin-top:20px;
}

#resetZoom {
	margin-right:5px;
}

.manualzoom-input {
	color: red;
}

#edit-group-dialog div.toggle.btn {
	width: 100px !important;
	float: right;
}

.center-radio-inline {
    padding: 8px;
    border-radius: 4px;
    width: 190px;
}

.center-radio-inline input[type='radio']{
	float: initial;
	margin: 0;
}

.center-radio-inline label {
	cursor: pointer;
}

.or-separator {
	margin-top: 20px;
}

.fieldWrapper {
    margin-right: 20px;
}

#clear-dates-options:hover {
	text-decoration: none;
}

#covereage-search-fields label {
	width: 90px;
}

#covereage-search-fields input {
	width: 100%;
}

form#covereage-search-fields {
    border: 1px solid #DDD;
    padding-top: 10px;
    padding-bottom: 10px;
    border-radius: 4px;
}

/* -------------- File browser styling ---------------- */
.file-browser {
    margin-bottom: 20px;
}

.file-browser-controls > div {
    margin-bottom: 10px
}

.file-browser-breadcrumb .breadcrumb{
    background: #FFF;
    margin-bottom: 0;
	padding: 0 4px;
}

.file-browser-breadcrumb .btn:not(.disabled) {
	color: #428bd3;
}

.file-browser-breadcrumb .btn.disabled {
	color: #9e9e9e;
}

.file-browser-breadcrumb {
	padding: 8px;
	min-height: 36px;
}

#fb-bread-crumbs li {
	color: #428bca;
	text-shadow: 0 1px 0 #fff;
}

#fb-bread-crumbs li.active {
	color: #999;
}

#fb-bread-crumbs li:not(.active):hover {
	cursor:pointer;
}

#fb-bread-crumbs li:not(.active):hover span {
	text-decoration: underline;
}

.fb-view-grid .fb-folder, .fb-view-grid .fb-file {
	width: 100px;
	height: 100px;
	margin: 10px;
	border: 1px solid transparent;
	float: left;
	overflow: hidden;
	text-overflow: ellipsis;
	-webkit-user-select: none; /* Chrome/Safari */
	-moz-user-select: none; /* Firefox */
	-ms-user-select: none; /* IE10+ */
	user-select: none;
}

#fb-sort a {
	cursor: pointer;
	padding: 8px;
	font-size: 12px;
}

#fb-sort ul {
	background :#FFF;
	padding: 1px;
}

.click-select-all {
	cursor: default !important;
}

#fb-sort ul li.active {
	pointer-events: none;
}

.fb-folder, .fb-file {
	list-style-type: none;
	padding: 10px;
}

.fb-folder:hover, .fb-file:hover, .fb-folder.ui-selected, .fb-file.ui-selected {
	border: 1px solid #fcefa1 !important;
	color: #363636;
	z-index: 5;
	box-shadow: 1px 1px 5px #ececec;
	-webkit-box-shadow: 1px 1px 5px #ececec;
	-moz-box-shadow: 1px 1px 5px #ececec;
}

.fb-folder.ui-selected, .fb-file.ui-selected {
	background: rgba(252, 239, 161, 0.14);
}

.fb-help-icon {
	font-size: 14px !important;
	color:#e6a14b;
	cursor: pointer;
	visibility: hidden;
}

.fb-help-icon:hover {
	color: #d68c31;
}

.fb-folder:hover .fb-help-icon , .fb-file:hover .fb-help-icon, .fb-file.ui-selected .fb-help-icon,
.fb-folder.ui-selected .fb-help-icon, .fb-file.ui-selecting .fb-help-icon,
.fb-folder.ui-selecting .fb-help-icon {
	visibility: visible;
}

.fb-folder.ui-selecting, .fb-file.ui-selecting {
	border: 1px solid #fcefa1;
	color: #363636;
	/*padding: 9px;*/
	background: #fbf9ee;
}

.fb-file small, .fb-folder small {
    color: #777;
}

ul#fb-files-container li.ui-selected .fb-file-name, #fb-files-container li.ui-selecting .fb-file-name {
	word-break: break-word;
}

ul#fb-files-container {
    min-height: 100%;
}

.fb-file span.fb-file-icon::before, .fb-stack .fa-file-o {
    background-color: #FFF;
    border-top-right-radius: 50%;
}

.fb-file-name {
	color: #555;
	max-height: 50px;
	font-size: 12px;
	cursor: default;
}

.fb-view-list .fb-file-name {
	font-size: 14px;
}
.fb-view-grid .fb-file-icon, .dz-details .fb-file-icon {
    font-size: 32px;
}

.file-browser-container {
    border: 1px solid #DDD
}

.file-browser-search {
    width: 100%;
}
/* ... */

